--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -4,6 +4,18 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+        <style>
+            html {
+                max-width: 70ch;
+                padding: 3em 1em;
+                margin: auto;
+                line-height: 1.75;
+                font-size: 1.25em;
+                font-family: sans-serif;
+
+            }
+
+        </style>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
